# ansible

./: .gitignore  README.md  ansible.cfg  hosts.yml  pyproject.toml  requirements.txt  setup_admin.common.yml  setup_admin.general.yml  setup_admin.yml  setup_app.common.yml  setup_app.general.yml  setup_app.ptero-node.yml  setup_app.yml  setup_cache.redis.yml  setup_cache.yml  setup_database.yml  setup_dify.yml  setup_dns.unbound.yml  setup_dns.yml  setup_game.ptero-node.yml  setup_gateway.yml  setup_honeypot.yml  setup_minecraftpanel.yml  setup_minecraftproxy.yml  setup_minecraftv2.yml  setup_monitor.yml  setup_personaldev.yml  setup_pteroweb.yml  setup_steamg.yml  setup_unbound.yml  setup_web.common.yml  setup_web.general.yml  setup_web.ptero-panel.yml  setup_web.redmine.yml  setup_web.yml  setup_wiki.yml  setup_zabbix.general.yml  vault_pass.sh
commands/: infra.py
group_vars/all/: vars  vault
inventories/kanagawa01/: hosts.yml
modules/alflag_infra/: __init__.py  ansible.py  cli.py  context.py
onp/admin/: setup.yml
onp/admin.common/: setup.yml
onp/admin.general/: setup.yml
onp/app/: setup.yml
onp/app.common/: setup.yml
onp/app.ptero-node/: setup.yml
onp/cache/: setup.yml
onp/database/: setup.yml
onp/dify/: setup.yml
onp/dns/: setup.yml
onp/gateway/: setup.yml
onp/honeypot/: setup.yml
onp/log/: setup.yml
onp/minecraft/: setup.yml
onp/minecraftpanel/: setup.yml
onp/minecraftproxy/: setup.yml
onp/minecraftv2/: setup.yml
onp/monitor/: setup.yml
onp/personaldev/: setup.yml
onp/ptero-node/: setup.yml
playbooks/: baseline.yml
(+66 files in other folders)
